--- a/NavMenu.razor
+++ b/NavMenu.razor
@@ -14,7 +14,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="Calculatrice">
-                <span class="oi oi-calculator" aria-hidden="true"></span> Calculatrice
+                <span class="oi oi-plus" aria-hidden="true"></span> Calculatrice
             </NavLink>
         </li>
         <li class="nav-item px-3">
