--- a/Test/Shared/NavMenu.razor
+++ b/Test/Shared/NavMenu.razor
@@ -13,15 +13,16 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Tutoriels">
+                <span class="oi oi-document" aria-hidden="true"></span> Tutoriels
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="Calculatrice">
                 <span class="oi oi-calculator" aria-hidden="true"></span> Calculatrice
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
+
     </ul>
 </div>
 
