Ajout lien tutoriel

--- a/Test/Pages/Tutoriels.razor
+++ b/Test/Pages/Tutoriels.razor
@@ -3,9 +3,12 @@
 <h1>Tutoriels</h1>
 
 <div class="btn-group2">
-    <button class="button" @onclick="GM">GitHub Mac</button>
+
     <button class="button" @onclick="GW">GitHub PC</button>
     <button class="button" @onclick="Csharp">C#</button>
+    <button onclick="location.href='http://www.google.com'" type="button">GitHub MAC</button>
+    <button onclick="location.href='http://www.google.com'" type="button">GitHub Windows</button>
+    <button onclick="location.href='http://www.google.com'" type="button">Csharp</button>
 </div>
 
     @code {
