--- a/Test/Pages/Calculatrice.razor
+++ b/Test/Pages/Calculatrice.razor
@@ -5,9 +5,9 @@
 <p> @calcul </p>
 <p> @total </p>
 
-    <button class="button-egal" @onclick="egal">=</button>
-    <button class="button-zero" @onclick="zero">0</button>
-    <button class="button-virgule" @onclick="virgule">,</button>
+<button class="button-egal" @onclick="egal">=</button>
+<button class="button-zero" @onclick="zero">0</button>
+<button class="button-virgule" @onclick="virgule">,</button>
 
 
 <div class="btn-group2">
@@ -38,27 +38,262 @@
     <button class="button-plus" @onclick="plus">+</button>
 </div>
 
+<input type="text" @onkeypress="KeyWasPressed" />
 
-    @code {
-        private float variableglobale = 0;
-        private float total = 0;
-        private float test = 0;
-        Boolean itworks = false;
-        private int clique = 0;
-        private int operateur = -1;
-        Boolean addition = false;
 
-        private int prec_operateur = -1;
-        private int cpt = 0;
-        String calcul = "";
-        Boolean debut = true;
-        Boolean reco = true;
+@code {
+    private float variableglobale = 0;
+    private float total = 0;
+    private float test = 0;
+    Boolean itworks = false;
+    private int clique = 0;
+    private int operateur = -1;
+    Boolean addition = false;
+    private int _count = 0;
+    private int prec_operateur = -1;
+    private int cpt = 0;
+    String calcul = "";
+    Boolean debut = true;
+    Boolean reco = true;
+    Boolean mul_div = true;
+    double nb_vir = 0;
 
-        private void egal()
+    private void egal()
+    {
+
+        calcul = calcul + variableglobale + " = ";
+        switch (operateur)
         {
+            case 1:
+                total = total + variableglobale;
+                break;
+            case 2:
+                total = total - variableglobale;
+                break;
+            case 3:
+                total = total * variableglobale;
+                break;
+            case 4:
+                total = total / variableglobale;
+                break;
+        }
 
-            calcul = calcul + variableglobale + " = ";
-            switch (operateur)
+
+        addition = false;
+        debut = true;
+        variableglobale = total;
+        reco = true;
+        itworks = true;
+    }
+
+    private void signe()
+    {
+        variableglobale = -variableglobale;
+        total = variableglobale;
+    }
+
+    private void virgule()
+    {
+
+    }
+
+    private void pourcentage()
+    {
+        variableglobale = (variableglobale / 100);
+        total = variableglobale;
+    }
+
+    private void division()
+    {
+        if (debut == true && reco == false)
+        {
+            calcul = variableglobale.ToString() + "/";
+            debut = false;
+
+        }
+        else
+        {
+            if (itworks == true)
+            {
+                calcul = "";
+                itworks = false;
+            }
+
+            calcul = calcul + variableglobale.ToString() + "/";
+        }
+
+        operateur = 4;
+        cpt++;
+
+        if (addition == false)
+        {
+            total = variableglobale;
+            variableglobale = 0;
+            addition = true;
+        }
+        else
+        {
+            switch (prec_operateur)
+            {
+                case 1:
+                    total = total + variableglobale;
+                    break;
+                case 2:
+                    total = total - variableglobale;
+                    break;
+                case 3:
+                    total = total * variableglobale;
+                    break;
+                case 4:
+                    total = total / variableglobale;
+                    break;
+            }
+        }
+
+        variableglobale = 0;
+        prec_operateur = operateur;
+    }
+
+
+    private void fois()
+    {
+        if (debut == true && reco == false)
+        {
+            calcul = variableglobale.ToString() + "*";
+            debut = false;
+        }
+        else
+        {
+            if (itworks == true)
+            {
+                calcul = "";
+                itworks = false;
+            }
+            calcul = calcul + variableglobale.ToString() + "*";
+        }
+
+        operateur = 3;
+        cpt++;
+
+        if (addition == false)
+        {
+            total = variableglobale;
+            variableglobale = 0;
+            addition = true;
+        }
+        else
+        {
+            switch (prec_operateur)
+            {
+                case 1:
+                    total = total + variableglobale;
+                    break;
+                case 2:
+                    total = total - variableglobale;
+                    break;
+                case 3:
+                    total = total * variableglobale;
+                    break;
+                case 4:
+                    total = total / variableglobale;
+                    break;
+            }
+        }
+
+        variableglobale = 0;
+        prec_operateur = operateur;
+
+    }
+
+    private void ac()
+    {
+        variableglobale = 0;
+        total = 0;
+        calcul = " ";
+    }
+
+    private void moins()
+    {
+        if (debut == true && reco == false)
+        {
+            calcul = variableglobale.ToString() + " - ";
+            debut = false;
+        }
+        else
+        {
+            if (itworks == true)
+            {
+                calcul = "";
+                itworks = false;
+            }
+            calcul = calcul + variableglobale.ToString() + " - ";
+        }
+
+        operateur = 2;
+        cpt++;
+
+        if (addition == false)
+        {
+            total = variableglobale;
+            variableglobale = 0;
+            addition = true;
+
+        }
+        else
+        {
+            switch (prec_operateur)
+            {
+                case 1:
+                    total = total + variableglobale;
+                    break;
+                case 2:
+                    total = total - variableglobale;
+                    break;
+                case 3:
+                    total = total * variableglobale;
+                    break;
+                case 4:
+                    total = total / variableglobale;
+                    break;
+            }
+        }
+        prec_operateur = operateur;
+
+        variableglobale = 0;
+    }
+
+    private void plus()
+    {
+        if (debut == true && reco == false)
+        {
+            calcul = variableglobale.ToString() + " + ";
+            debut = false;
+        }
+        else
+        {
+            if (itworks == true)
+            {
+                calcul = "";
+                itworks = false;
+            }
+            calcul = calcul + variableglobale.ToString() + " + ";
+        }
+
+
+
+        operateur = 1;
+        cpt++;
+
+
+        if (addition == false)
+        {
+            total = variableglobale;
+            variableglobale = 0;
+            addition = true;
+        }
+        else
+        {
+            switch (prec_operateur)
             {
                 case 1:
                     total = total + variableglobale;
@@ -75,306 +310,75 @@
             }
 
 
-            addition = false;
-            debut = true;
-            variableglobale = total;
-            reco = true;
-            itworks = true;
         }
+        variableglobale = 0;
+        prec_operateur = operateur;
+    }
 
-        private void signe()
-        {
-            variableglobale = -variableglobale;
-            total = variableglobale;
-        }
-
-        private void virgule()
-        {
-
-        }
-
-        private void pourcentage()
-        {
-            variableglobale = (variableglobale / 100);
-            total = variableglobale;
-        }
-
-        private void division()
-        {
-            if (debut == true && reco == false)
-            {
-                calcul = variableglobale.ToString() + "/";
-                debut = false;
-
-            }
-            else
-            {
-                if (itworks == true)
-                {
-                    calcul = "";
-                    itworks = false;
-                }
-
-                calcul = calcul + variableglobale.ToString() + "/";
-            }
-
-            operateur = 4;
-            cpt++;
-
-            if (addition == false)
-            {
-                total = variableglobale;
-                variableglobale = 0;
-                addition = true;
-            }
-            else
-            {
-                switch (prec_operateur)
-                {
-                    case 1:
-                        total = total + variableglobale;
-                        break;
-                    case 2:
-                        total = total - variableglobale;
-                        break;
-                    case 3:
-                        total = total * variableglobale;
-                        break;
-                    case 4:
-                        total = total / variableglobale;
-                        break;
-                }
-            }
-
-            variableglobale = 0;
-            prec_operateur = operateur;
-        }
-
-
-        private void fois()
-        {
-            if (debut == true && reco == false)
-            {
-                calcul = variableglobale.ToString() + "*";
-                debut = false;
-            }
-            else
-            {
-                if (itworks == true)
-                {
-                    calcul = "";
-                    itworks = false;
-                }
-                calcul = calcul + variableglobale.ToString() + "*";
-            }
-
-            operateur = 3;
-            cpt++;
-
-            if (addition == false)
-            {
-                total = variableglobale;
-                variableglobale = 0;
-                addition = true;
-            }
-            else
-            {
-                switch (prec_operateur)
-                {
-                    case 1:
-                        total = total + variableglobale;
-                        break;
-                    case 2:
-                        total = total - variableglobale;
-                        break;
-                    case 3:
-                        total = total * variableglobale;
-                        break;
-                    case 4:
-                        total = total / variableglobale;
-                        break;
-                }
-            }
-
-            variableglobale = 0;
-            prec_operateur = operateur;
-
-        }
-
-        private void ac()
-        {
-            variableglobale = 0;
-            total = 0;
-            calcul = " ";
-        }
-
-        private void moins()
-        {
-            if (debut == true && reco == false)
-            {
-                calcul = variableglobale.ToString() + " - ";
-                debut = false;
-            }
-            else
-            {
-                if (itworks == true)
-                {
-                    calcul = "";
-                    itworks = false;
-                }
-                calcul = calcul + variableglobale.ToString() + " - ";
-            }
-
-            operateur = 2;
-            cpt++;
-
-            if (addition == false)
-            {
-                total = variableglobale;
-                variableglobale = 0;
-                addition = true;
-
-            }
-            else
-            {
-                switch (prec_operateur)
-                {
-                    case 1:
-                        total = total + variableglobale;
-                        break;
-                    case 2:
-                        total = total - variableglobale;
-                        break;
-                    case 3:
-                        total = total * variableglobale;
-                        break;
-                    case 4:
-                        total = total / variableglobale;
-                        break;
-                }
-            }
-            prec_operateur = operateur;
-
-            variableglobale = 0;
-        }
-
-        private void plus()
-        {
-            if (debut == true && reco == false)
-            {
-                calcul = variableglobale.ToString() + " + ";
-                debut = false;
-            }
-            else
-            {
-                if (itworks == true)
-                {
-                    calcul = "";
-                    itworks = false;
-                }
-                calcul = calcul + variableglobale.ToString() + " + ";
-            }
-
-
-
-            operateur = 1;
-            cpt++;
-
-
-            if (addition == false)
-            {
-                total = variableglobale;
-                variableglobale = 0;
-                addition = true;
-            }
-            else
-            {
-                switch (prec_operateur)
-                {
-                    case 1:
-                        total = total + variableglobale;
-                        break;
-                    case 2:
-                        total = total - variableglobale;
-                        break;
-                    case 3:
-                        total = total * variableglobale;
-                        break;
-                    case 4:
-                        total = total / variableglobale;
-                        break;
-                }
-
-
-            }
-            variableglobale = 0;
-            prec_operateur = operateur;
-        }
-
-        private void zero()
-        {
-            int a = 0;
-            variableglobale = variableglobale * 10 + a;
-
-        }
-
-        private void un()
-        {
-            int a = 1;
-            variableglobale = variableglobale * 10 + a;
-
-        }
-
-        private void deux()
-        {
-            int a = 2;
-            variableglobale = variableglobale * 10 + a;
-
-        }
-
-        private void trois()
-        {
-            int a = 3;
-            variableglobale = variableglobale * 10 + a;
-
-        }
-
-        private void quatre()
-        {
-            int a = 4;
-            variableglobale = variableglobale * 10 + a;
-        }
-
-        private void cinq()
-        {
-            int a = 5;
-            variableglobale = variableglobale * 10 + a;
-        }
-
-        private void six()
-        {
-            int a = 6;
-            variableglobale = variableglobale * 10 + a;
-        }
-
-        private void sept()
-        {
-            int a = 7;
-            variableglobale = variableglobale * 10 + a;
-        }
-
-        private void huit()
-        {
-            int a = 8;
-            variableglobale = variableglobale * 10 + a;
-        }
-
-        private void neuf()
-        {
-            int a = 9;
-            variableglobale = variableglobale * 10 + a;
-        }
-
-
+    private void zero()
+    {
+        int a = 0;
+        variableglobale = variableglobale * 10 + a;
 
     }
+
+    private void un()
+    {
+        int a = 1;
+        variableglobale = variableglobale * 10 + a;
+
+    }
+
+    private void deux()
+    {
+        int a = 2;
+        variableglobale = variableglobale * 10 + a;
+
+    }
+
+    private void trois()
+    {
+        int a = 3;
+        variableglobale = variableglobale * 10 + a;
+
+    }
+
+    private void quatre()
+    {
+        int a = 4;
+        variableglobale = variableglobale * 10 + a;
+    }
+
+    private void cinq()
+    {
+        int a = 5;
+        variableglobale = variableglobale * 10 + a;
+    }
+
+    private void six()
+    {
+        int a = 6;
+        variableglobale = variableglobale * 10 + a;
+    }
+
+    private void sept()
+    {
+        int a = 7;
+        variableglobale = variableglobale * 10 + a;
+    }
+
+    private void huit()
+    {
+        int a = 8;
+        variableglobale = variableglobale * 10 + a;
+    }
+
+    private void neuf()
+    {
+        int a = 9;
+        variableglobale = variableglobale * 10 + a;
+    }
+
+
+
+}
