--- a/Test/Pages/Tutoriels.razor
+++ b/Test/Pages/Tutoriels.razor
@@ -4,8 +4,10 @@
 
 <div class="btn-group2">
 
-    <button onclick="location.href='https://drive.google.com/open?id=193XECGs6CjL2EbUMJUhmKn_3r9jZu2ae'" type="button">GitHub MAC</button>
-    <button onclick="location.href='https://drive.google.com/open?id=1oH6tTfIotSc04gNnfKAPeWU2fQ4Kxbwr'" type="button">GitHub Windows</button>
+    <button class="button" @onclick="GW">GitHub PC</button>
+    <button class="button" @onclick="Csharp">C#</button>
+    <button onclick="location.href='http://www.google.com'" type="button">GitHub MAC</button>
+    <button onclick="location.href='http://www.google.com'" type="button">GitHub Windows</button>
     <button onclick="location.href='http://www.google.com'" type="button">Csharp</button>
 </div>
 
